fix: fix product express checkout overflow

--- a/themes/origins/styles/featured-product.scss
+++ b/themes/origins/styles/featured-product.scss
@@ -369,39 +369,37 @@
 
     yc-product-info .buy-button {
       margin-block: 0;
-
-      .buy-area {
-        max-height: 750px;
-        overflow-y: scroll;
-
-        @media (max-height: 885px) {
-          max-height: 650px;
-        }
-
-        @media (max-height: 785px) {
-          max-height: 600px;
-        }
-
-        .express-checkout {
-          .header {
-            z-index: 2;
-            position: sticky;
-            inset-block-start: 0;
-            background-color: var(--section-bg-color, var(--color-base-white));
-            border-block-end: 1px solid color-mix(in srgb, currentColor 10%, transparent);
-          }
-
-          .fields {
-            border-block-start: none;
-            grid-template-columns: 1fr;
-          }
-        }
-      }
     }
 
     &:not([data-prevent-sticky]) {
       yc-product-info .buy-button {
         .buy-area {
+          max-height: 750px;
+          overflow-y: scroll;
+
+          @media (max-height: 885px) {
+            max-height: 650px;
+          }
+
+          @media (max-height: 785px) {
+            max-height: 600px;
+          }
+
+          .express-checkout {
+            .header {
+              z-index: 2;
+              position: sticky;
+              inset-block-start: 0;
+              background-color: var(--section-bg-color, var(--color-base-white));
+              border-block-end: 1px solid color-mix(in srgb, currentColor 10%, transparent);
+            }
+
+            .fields {
+              border-block-start: none;
+              grid-template-columns: 1fr;
+            }
+          }
+
           .express-checkout {
             border: none;
             border-radius: 0;
